--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -58,11 +58,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="117" id="WNz-Ji-atx" customClass="TweetTableViewCell" customModule="Twitter" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="44.5" width="375" height="117"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="150" id="WNz-Ji-atx" customClass="TweetTableViewCell" customModule="Twitter" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="44.5" width="375" height="150"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="WNz-Ji-atx" id="5mP-Fm-XzG">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="117"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Bso-4M-8I5">
@@ -81,25 +81,55 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tweet Content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="38A-G5-OJx">
-                                            <rect key="frame" x="89" y="37" width="270" height="69"/>
+                                            <rect key="frame" x="89" y="37" width="270" height="52"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pjn-Yz-2ER" userLabel="favButton">
+                                            <rect key="frame" x="319" y="99" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="2fs-Z8-HFj"/>
+                                                <constraint firstAttribute="width" constant="30" id="O8Z-dE-sR1"/>
+                                            </constraints>
+                                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                            <state key="normal" title="Button" image="favor-icon"/>
+                                            <connections>
+                                                <action selector="favoriteTweet:" destination="WNz-Ji-atx" eventType="touchUpInside" id="L09-Pk-pE1"/>
+                                            </connections>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qqD-qi-Pxa" userLabel="retweetButton">
+                                            <rect key="frame" x="279" y="99" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="OLX-Os-zea"/>
+                                                <constraint firstAttribute="width" constant="30" id="xh4-2y-G7v"/>
+                                            </constraints>
+                                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                            <state key="normal" title="Button" image="retweet-icon"/>
+                                            <connections>
+                                                <action selector="retweet:" destination="WNz-Ji-atx" eventType="touchUpInside" id="s4i-DG-wve"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="Bso-4M-8I5" firstAttribute="top" secondItem="5mP-Fm-XzG" secondAttribute="topMargin" id="0Fa-dF-RJw"/>
                                         <constraint firstItem="Bso-4M-8I5" firstAttribute="leading" secondItem="5mP-Fm-XzG" secondAttribute="leadingMargin" id="6zd-YB-xTt"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="qqD-qi-Pxa" secondAttribute="bottom" constant="10" id="I4R-8r-EhQ"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="pjn-Yz-2ER" secondAttribute="trailing" constant="10" id="NT8-dF-AJY"/>
+                                        <constraint firstItem="pjn-Yz-2ER" firstAttribute="top" secondItem="38A-G5-OJx" secondAttribute="bottom" constant="10" id="QOU-pS-kbw"/>
                                         <constraint firstItem="38A-G5-OJx" firstAttribute="leading" secondItem="Bso-4M-8I5" secondAttribute="trailing" constant="8" id="U8I-5n-ZVe"/>
-                                        <constraint firstItem="38A-G5-OJx" firstAttribute="bottom" secondItem="5mP-Fm-XzG" secondAttribute="bottomMargin" id="c06-1V-dvf"/>
                                         <constraint firstItem="ugB-Ao-dDt" firstAttribute="leading" secondItem="Bso-4M-8I5" secondAttribute="trailing" constant="8" id="dmU-z1-ouv"/>
                                         <constraint firstItem="ugB-Ao-dDt" firstAttribute="top" secondItem="5mP-Fm-XzG" secondAttribute="topMargin" id="h6T-SA-BIf"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="pjn-Yz-2ER" secondAttribute="bottom" constant="10" id="iyF-gs-SI6"/>
+                                        <constraint firstItem="pjn-Yz-2ER" firstAttribute="leading" secondItem="qqD-qi-Pxa" secondAttribute="trailing" constant="10" id="s64-Y7-YAP"/>
                                         <constraint firstItem="38A-G5-OJx" firstAttribute="top" secondItem="ugB-Ao-dDt" secondAttribute="bottom" constant="4" id="uDE-t9-r05"/>
                                         <constraint firstItem="38A-G5-OJx" firstAttribute="trailing" secondItem="5mP-Fm-XzG" secondAttribute="trailingMargin" id="voz-sn-al5"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="favButton" destination="pjn-Yz-2ER" id="eI5-WW-9b9"/>
                                     <outlet property="profileImageView" destination="Bso-4M-8I5" id="yPR-57-ErM"/>
+                                    <outlet property="retweetButton" destination="qqD-qi-Pxa" id="Mag-QV-J7z"/>
                                     <outlet property="tweetContent" destination="38A-G5-OJx" id="ZNX-bC-0PH"/>
                                     <outlet property="userNameLabel" destination="ugB-Ao-dDt" id="lNM-o1-eni"/>
                                 </connections>
@@ -117,11 +147,63 @@
                                 <action selector="onLogout:" destination="RGM-DU-uU4" id="zDY-cf-Adt"/>
                             </connections>
                         </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Tweet" id="Ecb-Nf-DsX">
+                            <connections>
+                                <segue destination="mYa-nG-ovS" kind="presentation" id="0EQ-m2-pDM"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="w3v-pB-z8z" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1813.5999999999999" y="90.404797601199405"/>
+        </scene>
+        <!--Tweet View Controller-->
+        <scene sceneID="Yip-PH-UVv">
+            <objects>
+                <viewController id="ea1-n9-KNB" customClass="TweetViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="6uJ-AA-53p">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="5eG-tW-GNY">
+                                <rect key="frame" x="0.0" y="56" width="375" height="128"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="8oL-rf-AY3"/>
+                                </constraints>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="yyV-XG-4ye"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="5eG-tW-GNY" firstAttribute="top" secondItem="yyV-XG-4ye" secondAttribute="top" id="4nD-0u-xyd"/>
+                            <constraint firstItem="5eG-tW-GNY" firstAttribute="leading" secondItem="yyV-XG-4ye" secondAttribute="leading" id="LaM-da-bh4"/>
+                            <constraint firstItem="yyV-XG-4ye" firstAttribute="trailing" secondItem="5eG-tW-GNY" secondAttribute="trailing" id="gKu-tc-KYx"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="w2d-fu-UMh">
+                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="Q9e-3v-maQ">
+                            <connections>
+                                <action selector="cancel:" destination="ea1-n9-KNB" id="DNl-uJ-yXF"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Tweet" id="Akl-el-YJk">
+                            <connections>
+                                <action selector="tweet:" destination="ea1-n9-KNB" id="7A2-P7-RYR"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tweetTextView" destination="5eG-tW-GNY" id="KJM-WA-prP"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aFv-v5-BXf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3536.8000000000002" y="83.208395802098963"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="s9F-iM-fbg">
@@ -150,8 +232,37 @@
             </objects>
             <point key="canvasLocation" x="986" y="92"/>
         </scene>
+        <!--Tweet Navigation Controller-->
+        <scene sceneID="Qkt-DF-F7l">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="mYa-nG-ovS" userLabel="Tweet Navigation Controller" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="313-2d-MX8">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="56"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <navigationBarAppearance key="standardAppearance">
+                            <color key="backgroundColor" red="0.3293845172" green="0.71803836939999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </navigationBarAppearance>
+                        <navigationBarAppearance key="scrollEdgeAppearance">
+                            <color key="backgroundColor" red="0.3293845172" green="0.71803836939999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </navigationBarAppearance>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ea1-n9-KNB" kind="relationship" relationship="rootViewController" id="w31-rg-n4s"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HFc-6X-Gjo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2782" y="83"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="favor-icon" width="30" height="30"/>
+        <image name="retweet-icon" width="30" height="30"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
